<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_weight="5">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bookSearchingMainTitle"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

         <TextView
            android:id="@+id/bookName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookSearchingBookName"/>

        <EditText
            android:id="@+id/bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="                      "/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/author1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookSearchingAuthor"/>

        <EditText
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="                      "/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/keyword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookSearchingKeyword"/>

        <EditText
            android:id="@+id/containingWordOrPhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="                      "
            android:imeOptions="actionDone" />
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/isbn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookSearchingISBN"/>

        <EditText
            android:id="@+id/isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="                      "
            android:imeOptions="actionDone" />
    </LinearLayout>


    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/bookSearchingSearchButton" />




</LinearLayout>